--- a/src/LolReplayParser/TestSuite/TestSuite.csproj
+++ b/src/LolReplayParser/TestSuite/TestSuite.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="resources\manyRoflFiles\**" />
+    <EmbeddedResource Remove="resources\manyRoflFiles\**" />
+    <None Remove="resources\manyRoflFiles\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
@@ -18,11 +24,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="resources\manyRoflFiles\RoflFilesCollection.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>RoflFilesCollection.resx</DependentUpon>
-    </Compile>
     <Compile Update="resources\TestResources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -31,10 +32,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="resources\manyRoflFiles\RoflFilesCollection.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>RoflFilesCollection.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
     <EmbeddedResource Update="resources\TestResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>TestResources.Designer.cs</LastGenOutput>
