--- a/src/LolReplayParser/TestSuite/TestSuite.csproj
+++ b/src/LolReplayParser/TestSuite/TestSuite.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LeagueReplayParser\LeagueReplayParser\LeagueReplayParser.csproj" />
     <ProjectReference Include="..\LolReplayParser\LolReplayParser.csproj" />
   </ItemGroup>
 
